@@ -1,13 +1,9 @@
 package com.example.demo.service.impl;
 
-import com.example.demo.model.Ticket;
-import com.example.demo.model.User;
-import com.example.demo.model.TicketCategory;
-import com.example.demo.repository.TicketRepository;
-import com.example.demo.repository.UserRepository;
-import com.example.demo.repository.TicketCategoryRepository;
+import com.example.demo.exception.NotFoundException;
+import com.example.demo.model.*;
+import com.example.demo.repository.*;
 import com.example.demo.service.TicketService;
-
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
@@ -20,9 +16,11 @@ public class TicketServiceImpl implements TicketService {
     private final UserRepository userRepository;
     private final TicketCategoryRepository categoryRepository;
 
-    public TicketServiceImpl(TicketRepository ticketRepository,
-                             UserRepository userRepository,
-                             TicketCategoryRepository categoryRepository) {
+    public TicketServiceImpl(
+            TicketRepository ticketRepository,
+            UserRepository userRepository,
+            TicketCategoryRepository categoryRepository
+    ) {
         this.ticketRepository = ticketRepository;
         this.userRepository = userRepository;
         this.categoryRepository = categoryRepository;
@@ -32,29 +30,24 @@ public class TicketServiceImpl implements TicketService {
     public Ticket createTicket(Long userId, Long categoryId, Ticket ticket) {
 
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new NotFoundException("User not found"));
 
         TicketCategory category = categoryRepository.findById(categoryId)
-                .orElseThrow(() -> new RuntimeException("Category not found"));
+                .orElseThrow(() -> new NotFoundException("Category not found"));
 
-        if (ticket.getSubject() == null || ticket.getSubject().isBlank()) {
-            throw new IllegalArgumentException("subject must not be blank");
+        if (ticket.getSubject() == null || ticket.getSubject().trim().isEmpty()) {
+            throw new IllegalArgumentException("Subject cannot be blank");
         }
 
         if (ticket.getDescription() == null || ticket.getDescription().length() < 10) {
-            throw new IllegalArgumentException("description must have at least 10 characters");
+            throw new IllegalArgumentException("description too short");
         }
 
         ticket.setUser(user);
         ticket.setCategory(category);
 
-        if (ticket.getStatus() == null) {
-            ticket.setStatus("OPEN");
-        }
-
-        if (ticket.getCreatedAt() == null) {
-            ticket.setCreatedAt(LocalDateTime.now());
-        }
+        if (ticket.getStatus() == null) ticket.setStatus("OPEN");
+        if (ticket.getCreatedAt() == null) ticket.setCreatedAt(LocalDateTime.now());
 
         return ticketRepository.save(ticket);
     }
@@ -62,7 +55,7 @@ public class TicketServiceImpl implements TicketService {
     @Override
     public Ticket getTicket(Long ticketId) {
         return ticketRepository.findById(ticketId)
-                .orElseThrow(() -> new RuntimeException("ticket not found with id " + ticketId));
+                .orElseThrow(() -> new NotFoundException("ticket not found"));
     }
 
     @Override
@@ -72,7 +65,6 @@ public class TicketServiceImpl implements TicketService {
 
     @Override
     public List<Ticket> getAllTickets() {
-        List<Ticket> tickets = ticketRepository.findAll();
-        return tickets != null ? tickets : List.of(); // Ensure list is never null
+        return ticketRepository.findAll();
     }
 }
